--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -18,6 +18,9 @@
             <li>
                 <a class="nav-learn" href="{{url_for('learn')}}">Learn</a>
             </li>
+            <li>
+                <a class="nav-home" href="{{url_for('login')}}">Login</a>
+            </li>
         </ul>
     </div>
 
